update UI cards + fixescards + popup card