@@ -13,6 +13,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21.0.4</javafx.version>
+        <selenium.version>4.18.1</selenium.version>
     </properties>
 
     <dependencies>
@@ -26,15 +27,29 @@
             <artifactId>javafx-graphics</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
             <version>2.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
         </dependency>
     </dependencies>
 
@@ -57,10 +72,6 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.ecommerce.stockapp.MainApp</mainClass>
-                    <options>
-                        <option>--add-modules</option>
-                        <option>jdk.httpserver</option>
-                    </options>
                 </configuration>
             </plugin>
         </plugins>
